--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
         
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="/build/app.css">
             <style>
                 .status-green { color: #198754; }
                 .status-yellow { color: #ffc107; }
@@ -121,7 +121,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+            <script src="/build/app.js"></script>
             <script>
                 // Auto-refresh Dashboard alle 5 Minuten
                 {% if app.request.get('_route') == 'app_dashboard' %}
