--- a/templates/kpi/show.html.twig
+++ b/templates/kpi/show.html.twig
@@ -72,14 +72,11 @@
                                         <td>
                                             <span class="h5 mb-0">{{ value.value }}</span>
                                             {% if kpi.unit %} {{ kpi.unit }}{% endif %}
-                                            {% if kpi.target and kpi.target != '0' and kpi.target != '' %}
-                                                {% set targetValue = (kpi.target ~ '')|replace(',', '.') %}
-                                                {% if targetValue > 0 %}
-                                                    {% set percentage = (value.getValueAsFloat() / targetValue) * 100 %}
-                                                    <br><small class="text-muted">
-                                                        {{ percentage|round(1) }}% des Ziels
-                                                    </small>
-                                                {% endif %}
+                                            {% if kpi.targetAsFloat %}
+                                                {% set percentage = (value.getValueAsFloat() / kpi.targetAsFloat) * 100 %}
+                                                <br><small class="text-muted">
+                                                    {{ percentage|round(1) }}% des Ziels
+                                                </small>
                                             {% endif %}
                                         </td>
                                         <td>
