--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -78,13 +78,12 @@
                                     </a>
                                 </li>
                             {% endif %}
-                        </ul>
-                        
-                        <div class="position-absolute bottom-0 w-100 p-3">
-                            <a href="{{ path('app_logout') }}" class="btn btn-outline-light btn-sm w-100">
+                            <li class="nav-item">
+                             <a href="{{ path('app_logout') }}" class="btn btn-outline-light btn-sm w-100">
                                 <i class="bi bi-box-arrow-right"></i> Abmelden
                             </a>
-                        </div>
+                            </li>
+                        </ul>
                     </div>
                 </nav>
                 {% endif %}
