Add Excel export of all KPI values

--- a/templates/admin/kpis/index.html.twig
+++ b/templates/admin/kpis/index.html.twig
@@ -8,6 +8,9 @@
     <a href="{{ path('app_admin_kpi_new') }}" class="btn btn-primary btn-sm">
         <i class="bi bi-plus-circle"></i> Neue KPI
     </a>
+    <a href="{{ path('app_admin_kpi_export') }}" class="btn btn-success btn-sm">
+        <i class="bi bi-download"></i> Excel Export
+    </a>
 {% endblock %}
 
 {% block body %}
